# ComfyUI-kaola-moss-ttsd

./: .gitignore  README.md  nodes.py  nodes_moss_tts.py  nodes_voice_generator.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
MOSS-TTSD/: LICENSE  README.md  README_zh.md  generation_utils.py  gradio_demo.py  inference.py
MOSS-TTSD/legacy/v0.7/: .pre-commit-config.yaml  README.md  README_zh.md  generation_utils.py  gradio_demo.py  inference.py  inference_sglang_server.py  modeling_asteroid.py  podcast_generate.py  requirements.txt  streamer.py  use_api.py
MOSS-TTSD/legacy/v0.7/XY_Tokenizer/: .gitignore  README.md  inference.py  requirements.txt
MOSS-TTSD/legacy/v0.7/XY_Tokenizer/config/: MOSS_TTSD_tokenizer.yaml  xy_tokenizer_32k_config.yaml  xy_tokenizer_config.yaml
MOSS-TTSD/legacy/v0.7/XY_Tokenizer/utils/: helpers.py
MOSS-TTSD/legacy/v0.7/XY_Tokenizer/xy_tokenizer/: model.py
MOSS-TTSD/legacy/v0.7/XY_Tokenizer/xy_tokenizer/nn/: feature_extractor.py  modules.py  quantizer.py
MOSS-TTSD/legacy/v0.7/examples/: example.txt  examples.jsonl  examples_only_text.jsonl  examples_single_reference.jsonl
MOSS-TTSD/legacy/v0.7/finetune/: data_preprocess.py  finetune.py  finetune_config.yaml  finetune_workflow.py  lora_config.yaml  requirements_finetune.txt  training_config.yaml
examples/: basic_workflow.json  workflow_sound_effect.json  workflow_split.json  workflow_split_full.json  workflow_voice_generator.json
tests/: debug_imports.py  test_import.py  test_moss_tts_node.py  test_package_init.py
